<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#F6F5F5"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Item Image -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_weight="1"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple"
        >

        <ImageView
            android:id="@+id/someDetailedItemImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_question_mark"
            android:contentDescription="@string/item_image"
            />

    </androidx.cardview.widget.CardView>

    <!-- Item Details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            >

            <!-- Item Name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <!-- Item Name -->
                <TextView
                    android:id="@+id/someDetailedItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    />

                <!-- Item Price -->
                <TextView
                    android:id="@+id/someDetailedItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    app:layout_constraintTop_toBottomOf="@+id/someDetailedItemName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"/>

                <!-- Item Description -->
                <TextView
                    android:id="@+id/someDetailedItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_description"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/someDetailedItemPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:padding="16dp"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            >
            <!-- Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <!-- Add to Cart Button -->
                <ImageButton
                    android:id="@+id/addToCartButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_to_cart"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:padding="16dp"
                    android:contentDescription="@string/add_to_cart"
                    />

                <!-- Add to Wishlist Button -->
                <ImageButton
                    android:id="@+id/addToWishlistButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_to_wishlist"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:padding="16dp"
                    android:contentDescription="@string/add_to_wishlist"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>