<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/library">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="40dp"
        android:layout_marginBottom="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:theme="@style/Theme.Swapify.Dark"
        app:cardBackgroundColor="?attr/colorOnPrimary">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="?attr/colorOnPrimary"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verification_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email_message"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                />

            <EditText
                android:importantForAutofill="no"
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:text="@string/placeholder_email"
                android:textColorHint="?android:textColorHint"
                android:textSize="16sp"
                android:labelFor="@id/email_field"
                />

            <Button
                android:id="@+id/resend_verification_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/resend_verification_email"
                android:textColor="?attr/colorPrimaryVariant"
                android:backgroundTint="?attr/colorSecondary" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/continue_to_login"
                android:textColor="?attr/colorPrimaryVariant"
                android:backgroundTint="?attr/colorSecondary" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnSecondary"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorPrimaryVariant"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
