<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp">

    <!-- Item Image -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_weight="1"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorPrimary"
        >

        <ImageView
            android:id="@+id/editItemImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_question_mark"
            android:contentDescription="@string/item_image"
            />

    </androidx.cardview.widget.CardView>

    <!-- Item Details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorOnPrimary"
            android:padding="16dp"
            >

            <!-- Item Name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorOnPrimary">

                <!-- Item Name -->
                <TextView
                    android:id="@+id/editItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:maxLines="2"
                    android:ellipsize="end"
                    />

                <!-- Item Price -->
                <TextView
                    android:id="@+id/editItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSecondary"
                    app:layout_constraintTop_toBottomOf="@+id/editItemName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOnPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:padding="16dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:layout_weight="2"
            >
            <!-- Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- Edit Item Button -->
                <ImageButton
                    android:id="@+id/editItemButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_edit"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:padding="16dp"
                    android:contentDescription="@string/send_message"
                    />

                <!-- Delete Item Button -->
                <ImageButton
                    android:id="@+id/deleteItemButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:padding="16dp"
                    android:contentDescription="@string/add_to_wishlist"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>